# BlueHash

./: Cargo.toml  README-zh.md  README.md
bench_result/bluehash 128-bit/base/: estimates.json  sample.json
bench_result/bluehash 128-bit/new/: benchmark.json  tukey.json
bench_result/bluehash 128-bit/report/: index.html
bench_result/bluehash 256-bit/base/: benchmark.json
bench_result/bluehash 256-bit/new/: estimates.json  sample.json  tukey.json
bench_result/bluehash 256-bit/report/: index.html
bench_result/bluehash 512-bit/base/: benchmark.json
bench_result/bluehash 512-bit/new/: estimates.json  sample.json  tukey.json
bench_result/bluehash 512-bit/report/: index.html
bench_result/report/: index.html
benches/: bluebench.rs
src/: constants.rs  lib.rs  noise.rs  utils.rs
