[package]
name = "BlueHash"
description = "A highly secure alternative to existing custom digest algorithms."
authors = ["blueokanna@gmail.com"]
version = "0.1.6"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/blueokanna/BlueHash"
keywords = ["Digest", "Algorithms", "Hash", "Crypto"]

[dependencies]
rand = "0.8.5"
criterion = { version = "0.5.1", features = ["plotters"] }
rayon = "1.10.0"

[[bench]]
name = "bluebench"
harness = false